Modification les cas test